// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image test on ios allows styling 1`] = `
<View
  aspectRatio={1.5}
  style={
    Object {
      "width": 100,
    }
  }
>
  <View
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <Image
      onLoad={[Function]}
      source={
        Object {
          "uri": "http://example.com/image.jpg",
        }
      }
      style={
        Object {
          "bottom": 0,
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": "100%",
        }
      }
    />
    <View
      onLayout={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <BVLinearGradient
          colors={
            Array [
              "#F9F9F9",
              "#EDEDED",
            ]
          }
          end={
            Object {
              "x": -0.09302964577578221,
              "y": 0.11488204504197774,
            }
          }
          locations={
            Array [
              0,
              1,
            ]
          }
          start={
            Object {
              "x": 1,
              "y": 0,
            }
          }
          style={
            Object {
              "flex": 1,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Image test on ios prepends https schema 1`] = `
<View
  aspectRatio={1.5}
>
  <View
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <Image
      onLoad={[Function]}
      source={
        Object {
          "uri": "https://example.com/image.jpg",
        }
      }
      style={
        Object {
          "bottom": 0,
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": "100%",
        }
      }
    />
    <View
      onLayout={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <BVLinearGradient
          colors={
            Array [
              "#F9F9F9",
              "#EDEDED",
            ]
          }
          end={
            Object {
              "x": -0.09302964577578221,
              "y": 0.11488204504197774,
            }
          }
          locations={
            Array [
              0,
              1,
            ]
          }
          start={
            Object {
              "x": 1,
              "y": 0,
            }
          }
          style={
            Object {
              "flex": 1,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Image test on ios renders correctly 1`] = `
<View
  aspectRatio={1.5}
>
  <View
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <Image
      onLoad={[Function]}
      source={
        Object {
          "uri": "http://example.com/image.jpg",
        }
      }
      style={
        Object {
          "bottom": 0,
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": "100%",
        }
      }
    />
    <View
      onLayout={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <BVLinearGradient
          colors={
            Array [
              "#F9F9F9",
              "#EDEDED",
            ]
          }
          end={
            Object {
              "x": -0.09302964577578221,
              "y": 0.11488204504197774,
            }
          }
          locations={
            Array [
              0,
              1,
            ]
          }
          start={
            Object {
              "x": 1,
              "y": 0,
            }
          }
          style={
            Object {
              "flex": 1,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;
